syntax = "proto3";
package fetchai.verifiablecredential.crypto.anonymouscredential;

option go_package = "github.com/fetchai/fetchd/x/verifiable-credential/crypto/anonymouscredential";

import "fetchai/ssi/verifiable-credential/crypto/bbsplus/bbsplus.proto";
import "fetchai/ssi/verifiable-credential/crypto/accumulator/accumulator.proto";

message PrivateKey {
  bbsplus.PrivateKey bbs_plus_key = 1;
  accumulator.PrivateKey accumulator_key =2;
}

message PublicParameters {
  bbsplus.PublicParameters bbs_plus_public_params = 1;
  accumulator.PublicParameters accumulator_public_params = 2;
}

message Credential {
  bytes bbs_plus_signature = 1;
  bytes accumulator_membership_witness = 2;
}

message AnonymousCredentialProof {
  bytes nonce = 1;
  bytes challenge = 2;
  bytes bbs_plus_proof = 3;
  bytes accumulator_entropy = 4;
  bytes accumulator_proof = 5;
}